--- a/5marias.html
+++ b/5marias.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>X MARIAS – PROTÓTIPO</title>
+  <title>5 MARIAS – PROTÓTIPO</title>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script defer src="engine/pedra-core.js"></script>
   <script defer src="engine/util.js"></script>
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>X MARIAS – PROTÓTIPO</h1>
+  <h1>5 MARIAS – PROTÓTIPO</h1>
 
   <div id="loginBox">
     <label for="user">Login:</label>
